--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
     @font-face {
       font-family: abel-regular;
-      src: url(Abel-Regular.TTF);
+      src: url(Abel-Regular.ttf);
     }
     
     html {
